deployment/acme-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.openshift.io/connects-to: 'acme-postgres'
    app.openshift.io/vcs-uri: 'https://github.com/mmartofel/kuberneter-probes.git'
  labels:
    app: acme-api
    app.kubernetes.io/component: acme-api
    app.kubernetes.io/instance: acme-api
    app.kubernetes.io/part-of: QUARKUS_API_SERVICE
    app.openshift.io/runtime: quarkus
  name: acme-api
spec:
  selector:
    matchLabels:
      deployment: acme-api
  template:
    metadata:
     labels:
      deployment: acme-api
    spec:
      containers:
      - env:
        - name: DBUSER
          valueFrom:
            configMapKeyRef:
              key: DBUSER
              name: postgres-configmap
        - name: DBCONNECT
          valueFrom:
            configMapKeyRef:
              key: DBCONNECT
              name: postgres-configmap
        - name: DBPASSWORD
          valueFrom:
            configMapKeyRef:
              key: DBPASSWORD
              name: postgres-configmap
        startupProbe:
            httpGet:
              path: /q/health/started
              port: 8080
              scheme: HTTP
            timeoutSeconds: 5
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
        livenessProbe:
            httpGet:
              path: /q/health/live
              port: 8080
              scheme: HTTP
            timeoutSeconds: 5
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
        readinessProbe:
            httpGet:
              path: /q/health/ready
              port: 8080
              scheme: HTTP
            timeoutSeconds: 5
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
        image: quay.io/mmartofe/acme-api:quarkus2133
        imagePullPolicy: Always
        name: acme-api
        ports:
        - containerPort: 8080
          protocol: TCP
        - containerPort: 8443
          protocol: TCP
        - containerPort: 8778
          protocol: TCP
        resources: {}
