deployment/acme-api/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: acme-api
    app.kubernetes.io/component: acme-api
    app.kubernetes.io/instance: acme-api
  name: acme-api
spec:
  port:
    targetPort: http-8080
  wildcardPolicy: None
  to:
    kind: Service
    name: acme-api
    weight: 100
